[tool.poetry]
name = "web-image-croling"
version = "0.1.0"
description = ""
authors = ["송승관 <yanhis97531@gmail.com>"]
readme = "README.md"
packages = [{include = "web_image_croling"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
